fix bug: use default avatar